--- a/event-log-extractor/package.json
+++ b/event-log-extractor/package.json
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "cors": "^2.8.5",
+        "express": "^5.1.0",
         "minimist": "^1.2.8",
         "olca-ipc": "^2.2.1"
     }
