--- a/event-log-extractor/package.json
+++ b/event-log-extractor/package.json
@@ -8,6 +8,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
+        "serve": "node app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
