Get file download to work

--- a/camunda-frontend/.babelrc
+++ b/camunda-frontend/.babelrc
@@ -11,6 +11,7 @@
       }
     ]
   ],
+  "sourceType": "unambiguous",
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-transform-object-assign"
